feat: Added comments controller, routes, swagger, and policies.
